Create a calculator body containing a display and buttons. Add footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,46 @@
     <script type="text/javascript" src="script.js" defer></script>
 </head>
 <body>
+
+    <div class="content">
+
+        <div class="calculator-body">
+            <div class="display"></div>
+            <div class="clear-backspace-buttons">
+                <button Id="clear">Clear</button>
+                <button Id="backspace">Backspace</button>
+            </div>
+            <div class="nums789-and-divide">
+                <button Id="seven">7</button>
+                <button Id="eight">8</button>
+                <button Id="nine">9</button>
+                <button Id="divide">/</button>
+            </div>
+            <div class="nums456-and-multiply">
+                <button Id="four">4</button>
+                <button Id="five">5</button>
+                <button Id="six">6</button>
+                <button Id="multiply">x</button>
+            </div>
+            <div class="nums123-and-subtract">
+                <button Id="one">1</button>
+                <button Id="two">2</button>
+                <button Id="three">3</button>
+                <button Id="subtract">-</button>
+            </div>
+            <div class="zero-and-other-operators">
+                <button Id="decimal">.</button>
+                <button Id="zero">0</button>
+                <button Id="equals">=</button>
+                <button Id="add">+</button>
+            </div>
+        </div>  
+    </div>
+    <div class="footer">
+        Created by M.e.l_121921
+    </div>
+
+
     
 </body>
 </html>
