Create 'user-entry' and 'result' divs inside the display div

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <div class="content">
 
         <div class="calculator-body">
-            <div class="display"></div>
+            <div class="display">
+                <div class="user-entry"></div>
+                <div class="result"></div>
+            </div>
             <div class="clear-backspace-buttons">
                 <button Id="clear">Clear</button>
                 <button Id="backspace">Backspace</button>
