Add empty paragraph tags to user-entry and result divs

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 
         <div class="calculator-body">
             <div class="display">
-                <div class="user-entry"></div>
-                <div class="result"></div>
+                <div class="user-entry">
+                    <p></p>
+                </div>
+                <div class="result">
+                    <p></p>
+                </div>
             </div>
             <div class="clear-backspace-buttons">
                 <button Id="clear">Clear</button>
