--- a/index.html
+++ b/index.html
@@ -26,26 +26,26 @@
                 <button Id="backspace">Backspace</button>
             </div>
             <div class="nums789-and-divide">
-                <button Id="seven">7</button>
-                <button Id="eight">8</button>
-                <button Id="nine">9</button>
+                <button class="num" Id="seven">7</button>
+                <button class="num" Id="eight">8</button>
+                <button class="num" Id="nine">9</button>
                 <button Id="divide">÷</button>
             </div>
             <div class="nums456-and-multiply">
-                <button Id="four">4</button>
-                <button Id="five">5</button>
-                <button Id="six">6</button>
+                <button class="num" Id="four">4</button>
+                <button class="num" Id="five">5</button>
+                <button class="num" Id="six">6</button>
                 <button Id="multiply">x</button>
             </div>
             <div class="nums123-and-subtract">
-                <button Id="one">1</button>
-                <button Id="two">2</button>
-                <button Id="three">3</button>
+                <button class="num" Id="one">1</button>
+                <button class="num" Id="two">2</button>
+                <button class="num" Id="three">3</button>
                 <button Id="subtract">-</button>
             </div>
             <div class="zero-and-other-operators">
                 <button Id="decimal">.</button>
-                <button Id="zero">0</button>
+                <button class="num" Id="zero">0</button>
                 <button Id="equals">=</button>
                 <button Id="add">+</button>
             </div>
