Add operator class to all operator buttons

--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
                 <button class="num" Id="seven">7</button>
                 <button class="num" Id="eight">8</button>
                 <button class="num" Id="nine">9</button>
-                <button Id="divide">÷</button>
+                <button class="operator" Id="divide">÷</button>
             </div>
             <div class="nums456-and-multiply">
                 <button class="num" Id="four">4</button>
                 <button class="num" Id="five">5</button>
                 <button class="num" Id="six">6</button>
-                <button Id="multiply">x</button>
+                <button class="operator" Id="multiply">x</button>
             </div>
             <div class="nums123-and-subtract">
                 <button class="num" Id="one">1</button>
                 <button class="num" Id="two">2</button>
                 <button class="num" Id="three">3</button>
-                <button Id="subtract">-</button>
+                <button class="operator" Id="subtract">-</button>
             </div>
             <div class="zero-and-other-operators">
                 <button Id="decimal">.</button>
                 <button class="num" Id="zero">0</button>
                 <button Id="equals">=</button>
-                <button Id="add">+</button>
+                <button class="operator" Id="add">+</button>
             </div>
         </div>  
     </div>
