Change calculator display labels to improve readability

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
         <div class="calculator-body">
             <div class="display">
-                <div class="user-entry">
+                <div class="upper-display">
                     <p></p>
                 </div>
-                <div class="result">
+                <div class="lower-display">
                     <p></p>
                 </div>
             </div>
