Capitalize text on clear and backspace buttons

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 </div>
             </div>
             <div class="clear-backspace-buttons">
-                <button Id="clear">Clear</button>
-                <button Id="backspace">Backspace</button>
+                <button Id="clear">CLEAR</button>
+                <button Id="backspace">BACKSPACE</button>
             </div>
             <div class="nums789-and-divide">
                 <button class="num" Id="seven">7</button>
